// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButtonGroup /> component its snapshot matches story Default 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <fieldset
    class="cds--fieldset"
  >
    <legend
      class="cds--label"
    >
      Some label
    </legend>
    <div
      class="RadioButtonGroupstyles__RadioButtonGroup-sc-17mcn6u-0"
    >
      <div
        class="cds--form-item"
      >
        <fieldset
          class="cds--radio-button-group cds--radio-button-group--vertical cds--radio-button-group--label-right"
        >
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_red"
                name="name"
                type="radio"
                value="red"
              />
              <label
                class="cds--radio-button__label"
                for="id_red"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Red
                </span>
              </label>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_green"
                name="name"
                type="radio"
                value="green"
              />
              <label
                class="cds--radio-button__label"
                for="id_green"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Green
                </span>
              </label>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_blue"
                name="name"
                type="radio"
                value="blue"
              />
              <label
                class="cds--radio-button__label"
                for="id_blue"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Blue
                </span>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<RadioButtonGroup /> component its snapshot matches story OnFieldPanel 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c3 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        A fieldset
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Some label
        </legend>
        <div
          class="RadioButtonGroupstyles__RadioButtonGroup-sc-17mcn6u-0"
        >
          <div
            class="cds--form-item"
          >
            <fieldset
              class="cds--radio-button-group cds--radio-button-group--vertical cds--radio-button-group--label-right"
            >
              <div
                class="c3"
              >
                <div
                  class="cds--radio-button-wrapper"
                >
                  <input
                    class="cds--radio-button"
                    id="id_red"
                    name="name"
                    type="radio"
                    value="red"
                  />
                  <label
                    class="cds--radio-button__label"
                    for="id_red"
                  >
                    <span
                      class="cds--radio-button__appearance"
                    />
                    <span>
                      Red
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="c3"
              >
                <div
                  class="cds--radio-button-wrapper"
                >
                  <input
                    class="cds--radio-button"
                    id="id_green"
                    name="name"
                    type="radio"
                    value="green"
                  />
                  <label
                    class="cds--radio-button__label"
                    for="id_green"
                  >
                    <span
                      class="cds--radio-button__appearance"
                    />
                    <span>
                      Green
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="c3"
              >
                <div
                  class="cds--radio-button-wrapper"
                >
                  <input
                    class="cds--radio-button"
                    id="id_blue"
                    name="name"
                    type="radio"
                    value="blue"
                  />
                  <label
                    class="cds--radio-button__label"
                    for="id_blue"
                  >
                    <span
                      class="cds--radio-button__appearance"
                    />
                    <span>
                      Blue
                    </span>
                  </label>
                </div>
              </div>
            </fieldset>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<RadioButtonGroup /> component its snapshot matches story TestOnForm 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <fieldset
            class="cds--fieldset"
          >
            <legend
              class="cds--label"
            >
              Some label
            </legend>
            <div
              class="RadioButtonGroupstyles__RadioButtonGroup-sc-17mcn6u-0"
            >
              <div
                class="cds--form-item"
              >
                <fieldset
                  class="cds--radio-button-group cds--radio-button-group--vertical cds--radio-button-group--label-right"
                >
                  <div
                    class="c0"
                  >
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        class="cds--radio-button"
                        id="field_red"
                        name="field"
                        type="radio"
                        value="red"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="field_red"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span>
                          Red
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="c0"
                  >
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        class="cds--radio-button"
                        id="field_green"
                        name="field"
                        type="radio"
                        value="green"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="field_green"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span>
                          Green
                        </span>
                      </label>
                    </div>
                  </div>
                  <div
                    class="c0"
                  >
                    <div
                      class="cds--radio-button-wrapper"
                    >
                      <input
                        class="cds--radio-button"
                        id="field_blue"
                        name="field"
                        type="radio"
                        value="blue"
                      />
                      <label
                        class="cds--radio-button__label"
                        for="field_blue"
                      >
                        <span
                          class="cds--radio-button__appearance"
                        />
                        <span>
                          Blue
                        </span>
                      </label>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            "red"
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioButtonGroup /> component its snapshot matches story WithError 1`] = `
.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border: 2px solid #da1e28;
}

.c2 {
  color: #da1e28;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <fieldset
    class="cds--fieldset"
  >
    <legend
      class="cds--label"
    >
      Some label
    </legend>
    <div
      class="c0"
    >
      <div
        class="cds--form-item"
      >
        <fieldset
          class="cds--radio-button-group cds--radio-button-group--vertical cds--radio-button-group--label-right"
        >
          <div
            class="c1"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_red"
                name="name"
                type="radio"
                value="red"
              />
              <label
                class="cds--radio-button__label"
                for="id_red"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Red
                </span>
              </label>
            </div>
          </div>
          <div
            class="c1"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_green"
                name="name"
                type="radio"
                value="green"
              />
              <label
                class="cds--radio-button__label"
                for="id_green"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Green
                </span>
              </label>
            </div>
          </div>
          <div
            class="c1"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_blue"
                name="name"
                type="radio"
                value="blue"
              />
              <label
                class="cds--radio-button__label"
                for="id_blue"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Blue
                </span>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
    <div
      class="c2"
    >
      Some error text
    </div>
  </fieldset>
</div>
`;

exports[`<RadioButtonGroup /> component its snapshot matches story WithHelpText 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #525252;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <fieldset
    class="cds--fieldset"
  >
    <legend
      class="cds--label"
    >
      Some label
    </legend>
    <div
      class="RadioButtonGroupstyles__RadioButtonGroup-sc-17mcn6u-0"
    >
      <div
        class="cds--form-item"
      >
        <fieldset
          class="cds--radio-button-group cds--radio-button-group--vertical cds--radio-button-group--label-right"
        >
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_red"
                name="name"
                type="radio"
                value="red"
              />
              <label
                class="cds--radio-button__label"
                for="id_red"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Red
                </span>
              </label>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_green"
                name="name"
                type="radio"
                value="green"
              />
              <label
                class="cds--radio-button__label"
                for="id_green"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Green
                </span>
              </label>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="id_blue"
                name="name"
                type="radio"
                value="blue"
              />
              <label
                class="cds--radio-button__label"
                for="id_blue"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span>
                  Blue
                </span>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
    <div
      class="c1"
    >
      Some help text
    </div>
  </fieldset>
</div>
`;
